style.css
/*=========================
Global styles
==========================*/

.container-fluid {
   /* margin-top: 40px; */
   padding: 0 0;
   overflow: hidden;
}

a:link, a:visited {
  text-decoration: none;
  color: black;
}

a:hover {
  text-decoration: none;
  color: #ff0088;
}

.header {
  text-align: center;
  font-family: 'Fredericka the Great', cursive;
 }

.next-section {
  font-family: 'Mate SC', cursive;
  font-size: 20px;
  line-height: 0;
}

.next-label:hover {
  color: #ff0088;
}

.tap {
  display: none;
}

.code-landing, .code-work {
  min-height: 106vh;
  background: url('images/code.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  z-index: -1;
  background-blend-mode: screen;
  background-color: #dddddd;
}
/*===========================
Landing Page
===========================*/

.name {
  padding-top: 100px;
}

.code-landing {
  margin-top: -40px;
}

.name-header {
  display: flex;
  justify-content: center;
}

.about-me {
  margin: 0;
  border-radius: 100%;
  border: 1px solid black;
  height: 170px;
  width: 165px;
  z-index: 2;
}

.mimi, .klein {
  font-size: 50px;
  margin-top: 50px;
}

.mimi {
  padding-right: 5%;
 }

 .klein {
  padding-left: 5%;
}

.web-dev {
  font-family: 'Fredericka the Great', cursive;
  font-size: 50px;
  text-align: center;
}

 nav {
  font-size: 30px;
  font-family: 'Mate SC', cursive;
  text-decoration: none;
}

.about {
  margin-top: 5%;
  margin-left: 30%;
  position: relative;
  animation-name: about-nav;
  animation-duration: 3s;
}

@keyframes about-nav {
  0% {top: 140px; left: 250px}
  100% {top: 0; left: 0}
}

.portfolio-link {
  margin-top: 5%;
  margin-left: 46%;
  position: relative;
}

.contact {
  margin-top: 5%;
  margin-left: 63%;
  position: relative;
  animation-name: contact-nav;
  animation-duration: 3s;
}

@keyframes contact-nav {
  0% {top: -120px; right: 200px}
  100% {top: 0; right: 0}
}

 /*=============================
 About
 ==============================*/


.biography {
  margin-top: 250px;
  display: flex;
  justify-content: space-between;
}

.hi {
  margin-bottom: 30px;
}

.tap {
  display: none;
}

.grid-container {
  margin-left: 25px;
}

.img-grid {
  height: 170px;
  width: 170px;
}

.bio {
  order: 2;
  width: 45%;
  text-align: justify;
  line-height: 30px;
  font-family: 'Quicksand', sans-serif;
  font-size: 18px;
  margin-right: 77px;
 }

.img-div:hover .caption {
  visibility: visible;
}

.line {
  border-top: 1px dotted black;
}

.skills, ul {
  margin-top: 30px;
  font-family: 'Mate SC', cursive;
  font-size: 18px;
}

.skills {
  -webkit-column-count: 2;
       -moz-column-count: 2;
  column-count: 2;
  list-style-type: none;
  text-align: center;
}

.work-section {
  margin-top: -5em;
  margin-left: 5em;
}

/*================================
Work
=================================*/

#portfolio {
  margin-top: 300px;
  padding-top: 20px;
}

.portfolio-header {
  margin: 5px 0 -40px 0;
}

/* .work-container {
  display: flex;
  justify-content: space-around;
} */

.work-bottom-row {
  margin-top: 130px;
}

.work-top-row {
  margin-top: 90px;
}

.work-links {
  /* height: 130px; */
  /* width: 190px; */
  display: flex;
  flex-direction: column;
  align-items: center;
}

.top-work {
  margin-bottom: 50px;
}

.work-img, .work-caption {
  height: 22vh;
  width: 33vh;
}

.work-img {
  border: 3px solid #ffff66;
}

.portfolio {
 margin-top: 150px;
 margin-bottom: 300px;
 display: flex;
 flex-direction: column;
 justify-content: center;
}

/* .portfolio-container {
  margin-right: 120px;
} */

.work-caption {
  font-size: 13px;
  font-family: 'Mate SC', cursive;
}

.links {
  width: 200px;
}

.link {
  display: inline;
  border: 1px solid black;
  border-radius: 10%;
  padding: 3%;
  font-family: 'Mate SC', cursive;
  font-size: 16px;
  background: white;
  box-shadow: 5px 5px 5px #555555;
  color: black;
  margin-left: 20px;
  }

.link:hover {
  background: #ffffcc;
  color: black;
 }

.tech-list {
  margin-top: -6px;
  list-style: none;
  margin-left: -30px;
}

.next-contact {
  margin-top: -100px;
}

.next-contact:not(*:root) {
  margin-top: -385px;
}

/*================================
Contact
================================*/

#contact {
  height: 300px;
  width: 300px;
  margin-top: 400px;
  margin-bottom: 400px;
}

.contact-links {
  margin-top: 200px;
}

.contact-link {
  margin-right: 30px;
  margin-left: 30px;
}

/*==============================
Footer
==============================*/

footer {
  margin-top: -40px;
}

/*=============================
Transparent caption overlay
=============================*/

figure {
  display: block;
  position: relative;
  float: left;
  overflow: hidden;
  margin: 0 20px 20px 0;
}

figcaption {
  font-family: 'Quicksand', sans-serif;
  font-size: 16px;
  position: absolute;
  background: black;
  background: rgba(0,0,0,0.75);
  color: white;
  padding: 10px 20px;
  opacity: 0;
  -webkit-transition: all 0.6s ease;
  -moz-transition:    all 0.6s ease;
  -o-transition:      all 0.6s ease;
}

figure:hover figcaption {
  opacity: 1;
}

figure:before {
  position: absolute;
  font-weight: 800;
  background: black;
  background: rgba(255,255,255,0.75);
  text-shadow: 0 0 5px white;
  color: black;
  width: 24px;
  height: 24px;
  -webkit-border-radius: 12px;
  -moz-border-radius:    12px;
  border-radius:         12px;
  text-align: center;
  font-size: 14px;
  line-height: 24px;
  -moz-transition: all 0.6s ease;
  opacity: 0.75;
}

figure:hover:before {
  opacity: 0;
}

.cap:before {  bottom: 10px; left: 10px; }
.cap figcaption { bottom: 0; left: -30%; }
.cap:hover figcaption { left: 0; }

.cap-bot:before { bottom: 10px; left: 10px; }
.cap-bot figcaption { left: 0; bottom: -30%;}
.cap-bot:hover figcaption { bottom: 0; }


/*=================================
Mobile
=================================*/

@media (max-width: 500px) {
  .container-fluid {
    margin: 0 0;
  }

  .next-section {
    font-size: 16px;
  }

  .name-header {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .about-me {
    height: 100px;
    width: 100px;
  }

  .mimi, .klein {
    font-size: 25px;
    margin-top: 50px;
    height: 50px;
    width: 100px;
    padding: 0;
  }

  .klein {
    margin-top: 30px;
  }

  .mimi-klein {
    display: flex;
    justify-content: space-around;
  }

  .web-dev {
    font-size: 25px;
  }

  nav {
    font-size: 25px;
    margin-top: 40px;
  }

  .about, .portfolio-link, .contact {
    margin: 0;
  }

  .biography {
    display: flex;
    flex-direction: column;
     margin-top: 50px;
  }

  .bio {
    order: -1;
    text-align: center;
    line-height: 30px;
    font-size: 15px;
    width: 100%;
    padding: 0 20px;
  }

  .grid-container {
    margin-left: 10px;
  }

  .img-grid {
    height: 100px;
    width: 100px;
  }

  figcaption {
    font-size: 10px;
  }

  .tap {
    display: block;
    text-align: center;
    margin: 48px 0 17px 0;
    font-size: 10px;
  }

  .code-work {
    height: 200vh;
    background-repeat: repeat-y;
    background-size: auto;
  }

  #portfolio {
    margin-top: 53px;
  }

  .portfolio-container {
    margin: -55px -10px 0 0;
  }

  .work-section {
    margin-top: 10px;
    margin-left: 0;
  }

  .work-links {
    margin-bottom: 50px;
  }

  .work-bottom-row {
    margin-top: 0;
  }

  .work-img, .work-caption {
    height: 18vh;
    width: 37vw;
    font-size: 10px;
  }

  body:last-child .next-contact, x:-moz-any-link {
    padding-top: 355px;
  }

  .next-contact:not(*:root) {
    padding-top: 20px;
    margin-top: -109px;
  }

  #contact {
    margin: 140px 0 0 30px;
    height: 520px;
  }

  footer {
    margin-left: 10px;
  }
}

